[package]
name = "universal-converter"
version = "0.1.0"
authors = ["Mo Kweon <kkweon@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4" # Date and time library for Rust
chrono-tz = "0.5"
regex = "1"
lazy_static = "1.4"
